--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,9 +2,15 @@ name: Laravel-Tests
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - develop
+      - 'release/**'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - develop
+      - 'release/**'
 
 jobs:
   laravel-tests:
