--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches:
       - main
-      - develop
+      - 'develop'
       - 'release/**'
   pull_request:
     branches:
       - main
-      - develop
+      - 'develop'
       - 'release/**'
 
 jobs:
