--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -3,14 +3,10 @@ name: Laravel-Tests
 on:
   push:
     branches:
-      - main
-      - 'develop'
-      - 'release/**'
+      [main, 'develop', 'release/**']
   pull_request:
     branches:
-      - main
-      - 'develop'
-      - 'release/**'
+      [main, 'develop', 'release/**']
 
 jobs:
   laravel-tests:
@@ -20,7 +16,7 @@ jobs:
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
-        php-version: '8.0'
+        php-version: '7.4'
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
