--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=site_name_with_no_spaces
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-CONTACT_ADDRESS=
+CONTACT_ADDRESS=your_contact_address@site-name.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=your_database_name
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,14 +29,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=noreply@site-name.com
+MAIL_FROM_NAME=mail_sender_name
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
