chore: update dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,14 @@ updates:
     target-branch: "develop"
     schedule:
       interval: "weekly"
+    commit_message:
+      prefix: "chore"
+      include_scope: true
   - package-ecosystem: "composer"
     directory: "/"
     target-branch: "develop"
     schedule:
       interval: "weekly"
+    commit_message:
+      prefix: "chore"
+      include_scope: true
