chore: resolve branch/file/etc confusion

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -3,14 +3,12 @@ name: Laravel-Tests
 on:
   push:
     branches:
-      - main
-      - 'develop'
-      - 'release/**'
+      - '**'
   pull_request:
     branches:
-      - main
-      - 'develop'
-      - 'release/**'
+      - '**'
+  release:
+    types: [published]
 
 jobs:
   laravel-tests:
