--- a/.github/workflows/format_php.yml
+++ b/.github/workflows/format_php.yml
@@ -27,4 +27,4 @@ jobs:
 
             - uses: stefanzweifel/git-auto-commit-action@v4
               with:
-                  commit_message: Apply php-cs-fixer changes
+                  commit_message: 'refactor: fix PHP styling'
