--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "itinerare/mundialis",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
-    "license": "MIT",
+    "description": "A web app framework for managing story, character, and world information.",
+    "license": "Parity-7.0",
     "require": {
         "php": "^7.4",
         "benjamincrozat/laravel-dropbox-driver": "^3.0",
