--- a/composer.json
+++ b/composer.json
@@ -4,35 +4,28 @@
     "description": "A web app framework for managing story, character, and world information.",
     "license": "Parity-7.0",
     "require": {
-        "php": "^8.0",
-        "benjamincrozat/laravel-dropbox-driver": "^3.0",
-        "doctrine/dbal": "2.2",
-        "fideloper/proxy": "^4.4",
+        "php": "^8.1",
+        "spatie/flysystem-dropbox": "^2.0.6",
+        "doctrine/dbal": "^2.2",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/database": "^5.6|^6.0|^7.0|^8.0",
-        "illuminate/http": "^5.6|^6.0|^7.0|^8.0",
-        "illuminate/pagination": "^5.6|^6.0|^7.0|^8.0",
-        "illuminate/queue": "^5.6|^6.0|^7.0|^8.0",
-        "illuminate/routing": "^5.6|^6.0|^7.0|^8.0",
-        "illuminate/support": "^5.6|^6.0|^7.0|^8.0",
         "intervention/image": "^2.5",
         "laracasts/flash": "^3.2",
         "laravel/fortify": "^1.7",
-        "laravel/framework": "^8.40",
+        "laravel/framework": "^9.0",
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.0",
-        "spatie/laravel-backup": "^6.16"
+        "spatie/laravel-backup": "^8.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "^3.5",
         "laravel/sail": "^1.0.1",
         "marcocesarato/php-conventional-changelog": "^1.10",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
