fix: error generating changelogs - change command to run as composer script

--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,9 @@
         ],
         "lint": [
             "./vendor/bin/php-cs-fixer fix -vvv --show-progress=dots"
+        ],
+        "changelog": [
+            "./vendor/marcocesarato/php-conventional-changelog/conventional-changelog"
         ]
     },
     "extra": {
