--- a/.github/workflows/format_blade.yml
+++ b/.github/workflows/format_blade.yml
@@ -25,6 +25,8 @@ jobs:
             - name: Run blade-formatter
               run: npm run format
 
-            - uses: stefanzweifel/git-auto-commit-action@v4
+            - uses: EndBug/add-and-commit@v9
               with:
-                  commit_message: 'refactor: fix blade formatting'
+                  message: 'refactor: fix blade formatting'
+                  committer_name: github-actions[bot]
+                  committer_email: github-actions[bot]@users.noreply.github.com
