--- a/.github/workflows/format_php.yml
+++ b/.github/workflows/format_php.yml
@@ -22,6 +22,8 @@ jobs:
             - name: Run pint
               run: composer lint
 
-            - uses: stefanzweifel/git-auto-commit-action@v4
+            - uses: EndBug/add-and-commit@v9
               with:
-                  commit_message: 'refactor: fix PHP styling'
+                  message: 'refactor: fix PHP styling'
+                  committer_name: github-actions[bot]
+                  committer_email: github-actions[bot]@users.noreply.github.com
