chore(workflows): add CI workflow for forgejo

--- a/.forgejo/workflows/Tests.yml
+++ b/.forgejo/workflows/Tests.yml
@@ -29,7 +29,7 @@ jobs:
         extensions: gd, imagick
 
     - name: Checkout code
-      uses: https://github.com/actions/checkout@v4
+      uses: actions/checkout@v4
 
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
