--- a/.forgejo/workflows/CI.yml
+++ b/.forgejo/workflows/CI.yml
@@ -40,8 +40,8 @@ jobs:
       with:
           message: 'refactor: fix PHP styling'
           default_author: github_actions
-          author_name: Amadeus[bot]
-          author_email: amadeus@itinerare.net
+          author_name: ${{ vars.COMMITTER_NAME }}
+          author_email: ${{ vars.COMMITTER_EMAIL }}
 
   blade-formatter:
     runs-on: docker
@@ -71,8 +71,8 @@ jobs:
           pull: '--rebase --autostash'
           message: 'refactor: fix blade formatting'
           default_author: github_actions
-          author_name: Amadeus[bot]
-          author_email: amadeus@itinerare.net
+          author_name: ${{ vars.COMMITTER_NAME }}
+          author_email: ${{ vars.COMMITTER_EMAIL }}
 
   rebuild-vite-assets:
     runs-on: docker
@@ -102,5 +102,5 @@ jobs:
           pull: '--rebase --autostash'
           message: 'chore(deps): rebuild mix assets'
           default_author: github_actions
-          author_name: Amadeus[bot]
-          author_email: amadeus@itinerare.net
+          author_name: ${{ vars.COMMITTER_NAME }}
+          author_email: ${{ vars.COMMITTER_EMAIL }}
