chore(workflows): fix mix assets job name

--- a/.forgejo/workflows/CI.yml
+++ b/.forgejo/workflows/CI.yml
@@ -74,7 +74,7 @@ jobs:
           author_name: ${{ vars.COMMITTER_NAME }}
           author_email: ${{ vars.COMMITTER_EMAIL }}
 
-  rebuild-vite-assets:
+  rebuild-mix-assets:
     runs-on: docker
 
     steps:
