--- a/.forgejo/workflows/Tests.yml
+++ b/.forgejo/workflows/Tests.yml
@@ -21,7 +21,7 @@ jobs:
         extensions: gd, imagick
 
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: https://code.itinerare.net/internal/checkout@v4
 
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
