chore(workflows): condense testing and CI workflows - only run tests on PRs - only run formatters if tests pass - don't run CI on non-commit PR changes

--- a/.forgejo/workflows/CI.yml
+++ b/.forgejo/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Lint & Build Mix Assets
+name: CI
 
 on:
   pull_request:
@@ -7,13 +7,53 @@ on:
       - 'develop'
     types:
       - opened
-      - edited
       - synchronize
       - reopened
 
 jobs:
+  laravel-tests:
+    strategy:
+      matrix:
+        target: ['8.1', '8.2']
+
+    runs-on: docker
+
+    steps:
+    - name: Set up PHP
+      uses: https://github.com/shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.target }}
+        extensions: gd, imagick
+
+    - name: Checkout code
+      uses: https://code.itinerare.net/internal/checkout@v4
+
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+    - name: Install dependencies
+      env:
+        COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH_JSON }}
+      run: composer install --no-ansi --no-interaction --no-scripts --prefer-dist --ignore-platform-reqs
+
+    - name: Generate key
+      run: php artisan key:generate
+
+    - name: Set directory permissions
+      run: chmod -R 777 storage bootstrap/cache
+
+    - name: Run tests
+      run: php artisan test
+      env:
+        DB_HOST: ${{ vars.MYSQL_HOST }}
+        DB_PORT: 3306
+        DB_DATABASE: mundialis_test
+        DB_USERNAME: forgejo_runner
+        DB_PASSWORD: ${{ secrets.MYSQL_PASS }}
+
   pint:
     runs-on: docker
+    needs: laravel-tests
 
     steps:
     - name: Set up PHP
@@ -52,6 +92,7 @@ jobs:
 
   blade-formatter:
     runs-on: docker
+    needs: laravel-tests
 
     steps:
     - name: Checkout code
@@ -90,6 +131,7 @@ jobs:
 
   rebuild-mix-assets:
     runs-on: docker
+    needs: laravel-tests
 
     steps:
     - name: Checkout code
