--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Parity-7.0",
     "require": {
         "php": "^8.1",
-        "spatie/flysystem-dropbox": "^3.0.0",
+        "alban/laravel-collective-spatie-html-parser": "^1.1",
         "doctrine/dbal": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
@@ -14,8 +14,9 @@
         "laravel/framework": "^10.0",
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.0",
-        "spatie/laravel-backup": "^8.0"
+        "spatie/flysystem-dropbox": "^3.0.0",
+        "spatie/laravel-backup": "^8.0",
+        "spatie/laravel-html": "^3.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
