chore(workflows): add site settings command to deploy workflow

--- a/.forgejo/workflows/Deploy.yml
+++ b/.forgejo/workflows/Deploy.yml
@@ -26,5 +26,6 @@ jobs:
           php artisan migrate --force
           php artisan optimize
           php artisan optimize
+          php artisan app:add-site-settings
           php artisan up
           ENDSSH
