--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DB_DATABASE=your_database_name
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
