--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Parity-7.0",
     "require": {
         "php": "^8.2",
-        "alban/laravel-collective-spatie-html-parser": "dev-master",
+        "alban/laravel-collective-spatie-html-parser": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.5",
         "laracasts/flash": "^3.2",
@@ -27,12 +27,6 @@
         "phpunit/phpunit": "^11.0",
         "spatie/laravel-ignition": "^2.0"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://code.itinerare.net/internal/laravel-collective-spatie-html-parser"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
