--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,8 @@
         "changelog": [
             "./vendor/marcocesarato/php-conventional-changelog/conventional-changelog"
         ],
-        "release": [
-            "./vendor/marcocesarato/php-conventional-changelog/conventional-changelog --no-tag"
+        "release-candidate": [
+            "./vendor/marcocesarato/php-conventional-changelog/conventional-changelog --rc"
         ]
     },
     "extra": {
