feat: add sqlite support
- update readme

--- a/.env.example
+++ b/.env.example
@@ -17,12 +17,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=your_database_name
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite #change to mysql if desired, uncommenting the info below
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=your_database_name
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
