feat: implement s3 support via storage driver

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,15 @@ DB_DATABASE=your_database_name
 DB_USERNAME=root
 DB_PASSWORD=
 
+FILESYSTEM_DISK=public
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_BUCKET=
+AWS_URL=
+AWS_ENDPOINT=
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -31,7 +40,6 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=file
